--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,66 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+      <% if flash[:notice] %>
+        <div class="notification is-primary global-notification">
+          <p class="notice"><%= notice %></p>
+        </div>
+      <% end %>
+
+      <% if flash[:alert] %>
+        <div class="notification is-danger global-notification">
+          <p class="alert"><%= alert %></p>
+        </div>
+      <% end %>
+
+
+    <nav class="navbar is-info">
+    
+    <div class="container navbar-brand">
+        <%= link_to 'Mambo', root_path, class: " title is-5 big" %>
+          
+        
+      <div class="navbar-burger burger" data-target="navbarExample">
+          <span></span>
+          <span></span>
+          <span></span>
+      </div>
+    
+      <div id="navbarExample" class="navbar-menu">
+        <div class="navbar-end">
+          <div class="field is-grouped">
+          <% if user_signed_in? %>
+            <p class="control">
+              <%= link_to 'Create Post', posts_path, class: "button is-info is-inverted" %>
+            </p>
+              <p class="control">
+                  <%= link_to current_user.first_name, edit_user_registration_path, class: "button is-info" %>
+              </p>
+              <p>
+                  <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "button is-info" %>
+              </p>
+
+            <% else %>
+                <div class="container navbar-brand">
+
+                </div> 
+            <% end %>
+              
+            
+          </div>
+        </div>
+      </div>
+  
+  </nav>
+
+  <div class="container">
     <%= yield %>
+
+  </div>
   </body>
 </html>
