--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <nav class="navbar is-info">
     
     <div class="container navbar-brand">
-        <%= link_to 'Mambo', root_path, class: " title is-5 big" %>
+        <%= link_to 'Mambo', posts_path, class: " title is-5 big" %>
           
         
       <div class="navbar-burger burger" data-target="navbarExample">
