--- a/app/views/posts/_who-to-follow.html.erb
+++ b/app/views/posts/_who-to-follow.html.erb
@@ -1,60 +1,19 @@
 <div class="column">
-<nav class="panel">
-<p class="panel-heading">Friend Requests</p>
-</nav>
-<div class="panel-block">
-<article class="media">
-<div class="media-left">
-<figure class="image is-32x32">
-
-
-</figure>
-</div>
-<div class="media-content">
-<div class="content">
-<p>
-<strong>Peter Kamala</strong>
-<small>@ricohombre</small>
-</p>
-</div>
-</div>
-</article>
-</div>
-
-<div class="panel-block">
-<article class="media">
-<div class="media-left">
-<figure class="image is-32x32">
-
-
-</figure>
-</div>
-<div class="media-content">
-<div class="content">
-<p>
-<strong>Jesse Bukambu</strong>
-<small>@jessejean567</small>
-</p>
-</div>
-</div>
-</article>
-</div>
-<div class="panel-block">
-<article class="media">
-<div class="media-left">
-<figure class="image is-32x32">
-
-
-</figure>
-    </div>
-    <div class="media-content">
-    <div class="content">
-    <p>
-    <strong>Abel Lukambuzi</strong>
-    <small>@maestro</small>
-    </p>
-    </div>
-    </div>
-    </article>
+    <nav class="panel">
+        <p class="panel-heading">Users</p>
+    </nav>
+    
+    <div class="panel-block">
+        <article class="media">
+            <div class="media-content">
+                <div class="content">
+                    <p>
+                        <strong>
+                            <%= link_to "Find friends", users_path %>
+                        </strong>
+                    </p>
+                </div>
+            </div>
+        </article>
     </div>
 </div>
