--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,9 @@
         </div>
       <% end %>
 
-
     <nav class="navbar is-info">
-    
     <div class="container navbar-brand">
         <%= link_to 'Mambo', posts_path, class: " title is-5 big" %>
-          
         
       <div class="navbar-burger burger" data-target="navbarExample">
           <span></span>
@@ -40,32 +37,18 @@
         <div class="navbar-end">
           <div class="field is-grouped">
           <% if user_signed_in? %>
-            <p class="control">
-              <%= link_to 'Create Post', posts_path, class: "button is-info is-inverted" %>
-            </p>
-              <p class="control">
-                  <%= link_to current_user.first_name, edit_user_registration_path, class: "button is-info" %>
-              </p>
-              <p>
-                  <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "button is-info" %>
-              </p>
-
-            <% else %>
-                <div class="container navbar-brand">
-
-                </div> 
-            <% end %>
-              
-            
+            <%= render 'layouts/user_nav' %>
+          <% else %>    
+            <%= render 'homepage/homelogin' %>   
+          <% end %> 
           </div>
         </div>
       </div>
-  
+    </div>
   </nav>
 
   <div class="container">
     <%= yield %>
-
   </div>
   </body>
 </html>
