--- a/app/views/homepage/_loginuser.html.erb
+++ b/app/views/homepage/_loginuser.html.erb
@@ -34,7 +34,9 @@
 
    <div class="field">
    <div class="control">
-   <%= f.button :submit, "Sign up", class: "button is-info is-medium" %>
+   <%= f.button :submit, "Sign up", class: "button is-success is-medium" %>
+   <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class: "button is-info is-medium" %>
+
    </div>
 
    </div>
