Add friendship functionality

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,7 +12,13 @@
     padding: 30px;
 }
 
+
+
 .myuserspace {
     width: 250px;
-    padding: 20px;
+    padding: 20px; 
+}
+
+.buttonspace {
+    margin: 10px 0 10px;
 }
