--- a/app/views/layouts/_user_nav.html.erb
+++ b/app/views/layouts/_user_nav.html.erb
@@ -3,7 +3,7 @@
     <%= link_to 'Dashboard', posts_path, class: "button is-info is-inverted" %>
 </p>
 <p class="control">
-    <%= link_to current_user.first_name, edit_user_registration_path, class: "button is-info" %>
+    <%= link_to "My Profile", users_show_path, class: "button is-info" %>
 </p>
 <p class="control">
     <%= link_to "Users", users_path, class: "button is-info" %>
